result.txt
python :   File "<string>", line 14
위치 줄:1 문자:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 14:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'  {p[" date\]}
                 ^
SyntaxError: unterminated string literal (detected at line 14)
